noinst_LIBRARIES = libDASM_arch.a

libDASM_arch_a_SOURCES = \
  args-x86.c             \
  asm-x86.c              \
  atab-x86.c             \
  disasm-x86.c           \
  dtab-x86.c             \
  modsib-x86.c           \
  prefix-x86.c           \
  regs-x86.c

INCLUDES = -I${top_srcdir}/include -I../include
